--- a/memory_schedule_tasks.json
+++ b/memory_schedule_tasks.json
@@ -20,7 +20,8 @@
     ],
     "2025-02-18": [
         "Leet code",
-        "Java.lang"
+        "Java.lang",
+        "Number System"
     ],
     "2025-03-04": [
         "Leet code",
@@ -86,5 +87,29 @@
         "Number System",
         "LeetCode Problem",
         "Oops Concept"
+    ],
+    "2025-02-13": [
+        "Number System"
+    ],
+    "2025-02-15": [
+        "Number System"
+    ],
+    "2025-02-25": [
+        "Number System"
+    ],
+    "2025-03-11": [
+        "Number System"
+    ],
+    "2025-04-08": [
+        "Number System"
+    ],
+    "2025-06-03": [
+        "Number System"
+    ],
+    "2025-09-23": [
+        "Number System"
+    ],
+    "2026-02-11": [
+        "Number System"
     ]
 }
