--- a/memory_schedule_tasks.json
+++ b/memory_schedule_tasks.json
@@ -56,7 +56,8 @@
     "2025-02-17": [
         "Number System",
         "LeetCode Problem",
-        "Oops Concept"
+        "Oops Concept",
+        "Java Methods"
     ],
     "2025-02-24": [
         "Number System",
@@ -111,5 +112,32 @@
     ],
     "2026-02-11": [
         "Number System"
+    ],
+    "2025-02-16": [
+        "Java Methods"
+    ],
+    "2025-02-19": [
+        "Java Methods"
+    ],
+    "2025-02-22": [
+        "Java Methods"
+    ],
+    "2025-03-01": [
+        "Java Methods"
+    ],
+    "2025-03-15": [
+        "Java Methods"
+    ],
+    "2025-04-12": [
+        "Java Methods"
+    ],
+    "2025-06-07": [
+        "Java Methods"
+    ],
+    "2025-09-27": [
+        "Java Methods"
+    ],
+    "2026-02-15": [
+        "Java Methods"
     ]
 }
